nginx/pod_example.yml
# vi pod_example.yml

kind: Pod
apiVersion: v1
metadata:
  name: nginx-pod
  namespace: nginx
spec:
  containers:
  - name: nginx
    image: nginx:latest
    ports:
    - containerPort: 80

# kubectl apply -f pod_example.yml
# kubectl get pods -n nginx
# To get inside pod 
# kubectl exec -it nginx-pod -n nginx -- bash
# curl 127.0.0.1
# we can see here welcome to nginx.
# exit
# kubectl describe pod nginx-pod -n nginx
