nginx/ingress.yml
# Ingress: Traffic re-routing of cluster.
# kubectl get deploy -n notes-app
# kubectl delete deploy notes-app-deployment -n notes-app
# kubectl delete svc notes-app-service -n notes-app
# kubectl delete ns notes-app
# Give same ns in both deployment and svc yml files (nginx)
# kubectl apply -f deployment.yml -f service.yml
# kubectl get pods -n nginx
# kubectl get svc -n nginx
# cd /home/ubuntu/kind-cluster/Kubernetes
# kubectl apply -f https://kind.sigs.k8s.io/examples/ingress/deploy-ingress-nginx.yaml
# kubectl get ns
# kubectl get pods -n ingress-nginx
#  kubectl get svc -n ingress-nginx
# cd /home/ubuntu/kind-cluster/kubernetes/nginx
# vi ingress.yml


apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-notes-ingress
  namespace: nginx
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /nginx
        backend:
          service:
            name: nginx-service
            port: 
              number: 80
      - pathType: Prefix
        path: /
        backend:
          service:
            name: notes-app-service
            port: 
              number: 8000


# kubectl apply -f ingress.yml
# kubectl get ingress -n nginx
# kubectl get all -n nginx
# kubectl get svc -n ingress-nginx
# sudo -E  kubectl port-forward service/ingress-nginx-controller -n ingress-nginx 8080:80 --address=0.0.0.0
# access app: Public_IP:8080/  -- redirect to notes app
# access app: public-ip:8080/nginx -- redirect to nginx
